# rust_projekti

./: .gitignore  compose.backend.yml  compose.prod.yml  compose.yml  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  diesel.toml
backend/config/: Default.example.yaml
backend/migrations/2024-11-26-181847_create_users/: up.sql
backend/migrations/2024-11-26-181855_create_emails/: up.sql
backend/src/: db.rs  jwt.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
backend/src/api/: auth.rs  catchers.rs  emails.rs  health.rs  mod.rs  status.rs  users.rs
backend/src/db/: mod.rs  pool.rs  schema.rs
backend/src/db/migrations/2024-11-26-181847_create_users/: up.sql
backend/src/db/migrations/2024-11-26-181855_create_emails/: up.sql
backend/src/models/: email.rs  mod.rs  user.rs
backend/src/services/: auth.rs  email.rs  jwt.rs  mod.rs  user.rs
backend/src/utils/: config.rs  cors.rs  errors.rs  mod.rs
backend/src/validation/: auth.rs  mod.rs
backend/templates/: verification_email.hbs
db/: init.sql
frontend/: .eslintignore  .prettierrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: EmailReservation.jsx  Header.jsx  LoadingSpinner.jsx  LoginCard.jsx  LoginForm.jsx  MainNav.jsx  MobileNav.jsx  ProfileCard.jsx  ProfileCardEmail.jsx  ProfileCardFirstname.jsx  ProfileCardLastname.jsx  ProfileCardPassword.jsx  ProfileDisplay.jsx  ProfileEmail.jsx  ProfileFirstname.jsx  ProfileForm.jsx  ProfileLastname.jsx  ProfilePassword.jsx  RegisterCard.jsx  RegisterForm.jsx  SiteHeader.jsx  VefifyCard.jsx  VerifiedCard.jsx  VerifiedEmailCard.jsx
frontend/src/pages/: ConfirmEmail.jsx  ConfirmedEmail.jsx  ErrorPage.jsx  Login.jsx  Logout.jsx  Profile.jsx  Register.jsx  RootLayout.jsx  VerifiedEmail.jsx  VerifyEmail.jsx
(+12 files in other folders)
