[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json", "tls"]}
jsonwebtoken = "9" # For token generation
serde = {version = "1.0", features = ["derive"] }
argon2 = "0.5.3" # For password hashing
diesel = { version = "2.2.0", features = ["mysql", "chrono", "r2d2"] }
config = "0.14" # For environment variable management
mysqlclient-sys = "0.4.1"
chrono = "0.4.38"
thiserror = "2"
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls"] }
handlebars = "6.2.0"
rand = "0.8.5"
serde_json = "1.0.133"